# mammos-entity

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING-MaMMoS.md  CONTRIBUTING.md  README.md  pyproject.toml
.binder/: environment.yml
.github/ISSUE_TEMPLATE/: feature-request--new-entity.md  feature-request--new-entity.yml
.github/workflows/: cd.yml  check-changelog.yml  publish.yml  test.yml  tests.yml
binder/: environment.yml
changes/: 102.added.md  103.added.md  104.misc.md  105.added.md  107.added.md  115.changed.md  116.changed.md  117.added.md  118.changed.md  119.added.md  122.added.md  123.added.md  129.added.md  130.added.md  131.added.md  141.added.md  146.added.md  147.added.md  154.changed.md  157.fixed.md  158.fixed.md  160.changed.md  161.added.md  162.added.md  169.fixed.md  170.fixed.md  172.changed.md  173.added.md  174.added.md  176.added.md  177.changed.md  187.misc.md  191.misc.md  201.misc.md  215.changed.md  224.fixed.md  232.added.md  235.changed.md  236.added.md  242.changed.md  (+18 more)
dev/: entity_subclass.ipynb
docs/: example.ipynb  explore-ontology.ipynb
examples/: common-tasks.ipynb  csv.ipynb  entity-collection.ipynb  entity.ipynb  example.ipynb  hdf5.ipynb  index.rst  io.ipynb  quickstart.ipynb  useful_operations.ipynb  yaml.ipynb
src/mammos_entity/: __init__.py  _base.py  _decorators.py  _entities.py  _entity.py  _entity_collection.py  _entity_collection_repr.css  _entity_collection_tree.css  _entity_collection_tree.js  _entity_collection_tree.py  _entity_collection_tree_widget.py  _factory.py  _onto.py  _ontology.py  _read_files.py  _repr.py  _typevars.py  _typing.py  base.py  entities.py  io.py  onto.py  operations.py  typing.py
src/mammos_entity/_entity_collection_tree/: __init__.py  _common.py  _html_helpers.py  _plain_text.py  _static_html.py  _widget.js  _widget.py
src/mammos_entity/ontology/: magnetic-materials.ttl
tests/: conftest.py  test_convert_entity_likes.py  test_csv.py  test_entity.py  test_entity_collection.py  test_entity_collection_repr_html.py  test_entity_collection_tree_view.py  test_entity_repr_html.py  test_hdf5.py  test_io.py  test_ontology.py  test_operations.py  test_predefined_entities.py  test_typing.py  test_yaml.py
