[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mammos-entity"
version = "0.1.0"
description = "Python package to specify material parameters for MaMMoS simulation suite."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Swapneel Amit Pathak" },
  { name = "Andrea Petrocchi" },
  { name = "Sam Holt" },
  { name = "Hans Fangohr" },
]

dependencies = ["mammos-units", "EMMOntoPy", "numpy"]


[tool.ruff.lint]
ignore-init-module-imports = true # do not remove unused imports in __init__ and warn instead
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
ignore = [
  # conflict with other rules
  "D203", # one-blank-line-before-class (conflicts with D204)
  "D212", # multi-line-summary-first-line (conflicts with D213)
  # conflict with formatter
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  # conflict with Python 3.6 compatibility
  "UP022", # replace-stdout-stderr
]

[tool.ruff.lint.isort]
known-local-folder = ["src/mammos_entity"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "B018", # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
  "E501", # line too long
  "F811", # 'redefined-while-unused'; many false positives in notebooks because ipywidgets decorated functions are not recognised
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
mammos-entity = { path = ".", editable = true }

[tool.pixi.tasks]
example = "jupyter-lab docs/example.ipynb"

[tool.pixi.dependencies]
jupyter = ">=1.1.1,<2"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest -vv"

[tool.pixi.feature.format.dependencies]
ruff = "*"

[tool.pixi.feature.format.tasks]
format = "ruff format src/ && ruff check --select I --fix src/"
format-tests = "ruff format tests/ && ruff check --select I --fix tests/"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
format = { features = ["format"], no-default-feature = true }
